@@ -839,7 +839,8 @@ org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.sDes
 org.openjump.core.ui.plugin.tools.AdvancedMeasurePlugin.OptionPanelTitle = Measurement
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.font = Font\:
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-font = Choose font
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary = Paint distance and area?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-length = Paint distance?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-area = Paint area?
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.fontcolor = Fontcolor\:
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.choose-color = Choose color
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertex = Vertex
